// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductCard /> should hide shipping icon if is not free shipping 1`] = `
.c0 {
  display: flex;
  flex-direction: row;
  padding: 2.75rem 0;
}

.c0:hover .ProductCard__title {
  color: #4A7FEC;
}

.c1 {
  width: 160px;
  height: 160px;
  border-radius: 0.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  flex-shrink: 0;
}

.c1:empty {
  background: #EEEEEE;
}

.c1 img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.c2 {
  padding: 1rem;
  width: 50%;
}

.c3 {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.c4 {
  font-size: 1.375rem;
  font-weight: 400;
}

.c5 {
  font-size: 1.125rem;
  font-weight: 300;
  margin-top: 1rem;
}

.c6 {
  flex: 1;
}

.c7 {
  font-weight: 300;
  font-size: 0.875rem;
  color: #727272;
  display: block;
  text-align: right;
  padding-right: 20%;
}

@media screen and (max-width: 576px) {
  .c0 {
    flex-direction: column;
  }
}

@media screen and (max-width: 576px) {
  .c1 {
    width: 100%;
    height: 250px;
  }
}

@media screen and (max-width: 576px) {
  .c2 {
    width: 100%;
  }
}

@media screen and (max-width: 576px) {
  .c7 {
    text-align: left;
    padding: 0 1rem;
  }
}

<div>
  <a
    class="c0"
    href="/mock-id"
  >
    <div
      class="c1"
    >
      <img
        loading="lazy"
        src="http://mock/picture.png"
      />
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          $ 4.445
        </p>
      </div>
      <h2
        class="c5 ProductCard__title"
      >
        Mocked product title
      </h2>
    </div>
    <div
      class="c6"
    >
      <span
        class="c7"
      >
        Produto novo
      </span>
    </div>
  </a>
</div>
`;

exports[`<ProductCard /> should render card correcly 1`] = `
.c5 {
  width: 22px;
  height: 22px;
  border-radius: 9999px;
  background: #00a650;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c0 {
  display: flex;
  flex-direction: row;
  padding: 2.75rem 0;
}

.c0:hover .ProductCard__title {
  color: #4A7FEC;
}

.c1 {
  width: 160px;
  height: 160px;
  border-radius: 0.25rem;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  flex-shrink: 0;
}

.c1:empty {
  background: #EEEEEE;
}

.c1 img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.c2 {
  padding: 1rem;
  width: 50%;
}

.c3 {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.c4 {
  font-size: 1.375rem;
  font-weight: 400;
}

.c6 {
  font-size: 1.125rem;
  font-weight: 300;
  margin-top: 1rem;
}

.c7 {
  flex: 1;
}

.c8 {
  font-weight: 300;
  font-size: 0.875rem;
  color: #727272;
  display: block;
  text-align: right;
  padding-right: 20%;
}

@media screen and (max-width: 576px) {
  .c0 {
    flex-direction: column;
  }
}

@media screen and (max-width: 576px) {
  .c1 {
    width: 100%;
    height: 250px;
  }
}

@media screen and (max-width: 576px) {
  .c2 {
    width: 100%;
  }
}

@media screen and (max-width: 576px) {
  .c8 {
    text-align: left;
    padding: 0 1rem;
  }
}

<div>
  <a
    class="c0"
    href="/mock-id"
  >
    <div
      class="c1"
    >
      <img
        loading="lazy"
        src="http://mock/picture.png"
      />
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          $ 4.445
        </p>
        <div
          aria-label="Frete grátis"
          class="c5"
          color="success-500"
        >
          <svg
            class="icon-truck"
            color="#ffffff"
            fill="none"
            height="11"
            size="11"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="11"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="13"
              width="15"
              x="1"
              y="3"
            />
            <polygon
              points="16 8 20 8 23 11 23 16 16 16 16 8"
            />
            <circle
              cx="5.5"
              cy="18.5"
              r="2.5"
            />
            <circle
              cx="18.5"
              cy="18.5"
              r="2.5"
            />
          </svg>
        </div>
      </div>
      <h2
        class="c6 ProductCard__title"
      >
        Mocked product title
      </h2>
    </div>
    <div
      class="c7"
    >
      <span
        class="c8"
      >
        Produto novo
      </span>
    </div>
  </a>
</div>
`;
